# mac-dotfiles

./: .gitignore  Brewfile  README.md  setup.sh
.config/fish/: config.fish
.config/fish/functions/: fish_jj_prompt.fish  fish_prompt.fish  fish_vcs_prompt.fish  jmrg.fish  jpr.fish
.config/ghostty/: config
.pi/agent/: .stow-local-ignore  APPEND_SYSTEM.md  keybindings.json  settings.json
.pi/agent/extensions/: modal-editor.ts
.pi/agent/extensions/jetbrains-bridge/: ides.json  index.ts  mcp-client.ts  package-lock.json  package.json
.pi/agent/extensions/plan-mode/: README.md  index.ts  utils.ts
.pi/agent/extensions/semantic-search/: PLAN.md  TODO.md  chunker.ts  db.ts  embedder.ts  index.ts  indexer.ts  native-backend.ts  package-lock.json  package.json  test-e2e.ts  test-unit.ts
.pi/agent/extensions/semantic-search/native/: .gitignore  Cargo.toml
.pi/agent/extensions/semantic-search/native/src/: bench.rs  db.rs  lib.rs  model.rs  search_bench.rs
.pi/agent/extensions/semantic-search/plans/: mlx-gpu-embedder.md  rust-code-search.md
.pi/agent/extensions/tree-sitter-nav/: grep-parser.test.ts  index.ts  languages.ts  package-lock.json  package.json  parser.ts  symbols.ts
