[package]
name = "semantic-search-native"
edition = "2021"

[[bin]]
name = "bench"
path = "src/bench.rs"

[dependencies]
mlx-rs = { git = "https://github.com/oxideai/mlx-rs", rev = "fc41a8fa" }
mlx-macros = { git = "https://github.com/oxideai/mlx-rs", rev = "fc41a8fa" }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
