[package]
name = "semantic-search-native"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "bench"
path = "src/bench.rs"

[dependencies]
mlx-rs = { git = "https://github.com/oxideai/mlx-rs", rev = "fc41a8fa" }
mlx-macros = { git = "https://github.com/oxideai/mlx-rs", rev = "fc41a8fa" }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
rusqlite = { version = "0.32", features = ["bundled"] }

napi = { version = "2", features = ["napi8"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simsimd = "6.5"
bytemuck = "1"

[build-dependencies]
napi-build = "2"

[[bin]]
name = "search-bench"
path = "src/search_bench.rs"
